--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
 body , html {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -94,3 +95,15 @@ td , th , tr{
   background-color: #418deb;
   border-radius: 50%;
 }
+
+h5 {
+  font-family: 'Oswald', sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+  color: #fff;
+}
+
+
+
+
+
